--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
   "dependencies": {
     "axios": "^0.18.0",
     "dotenv": "^6.2.0",
+    "moment": "^2.24.0",
     "node-spotify-api": "^1.0.7"
-  }
+  },
+  "devDependencies": {}
 }
